--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,404 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: var(--font-family);
+  font-size: var(--text-font-size);
+  font-weight: 400;
+  color: var(--color-main, #f1b2ce);
+  background-image: var(--bg-image-theme);
+  background-color: var(--color-bg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.header {
+  /*block-size: min(668px, 100vh);*/
+  height: 100vh;
+  min-height: 668px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  position: relative;
+  margin-block-end: 40px;
+  padding-block-start: 10px;
+  padding-block-end: 10px;
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  inset-block-start: 10px;
+  inset-inline-end: 10px;
+  border-block-start: 1px solid var(--color-decor-zone);
+  border-inline-end: 1px solid var(--color-decor-zone);
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  inset-block-end: 10px; 
+  inset-inline-start: 10px;
+  border-block-end: 1px solid var(--color-decor-zone);
+  border-inline-start: 1px solid var(--color-decor-zone);
+}
+
+.decorated__element {
+  position: absolute;
+  content: "";
+  color: var(--color-decor-zone);
+  text-transform: uppercase;
+  inset-block-start: 10px; /*top*/
+  inset-inline-end: 19px; /*right*/
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  line-height: 139%;
+}
+
+.decorated__element::after {
+  content: '';
+  inline-size: 9px;
+  block-size: 9px;
+  display: block;
+  border-radius: 100%;
+  background-color: var(--color-decor-zone);
+  box-shadow: 0 0 4px 2px var(--color-decor-zone);
+}
+
+.header__theme-menu {
+  justify-self: right;
+  padding-inline-end: 10px; /*padding-right*/
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+} 
+
+.header__theme-menu-button {
+  color: var(--color-button);
+  text-transform: lowercase;
+  background-color: transparent;
+  border: 0;
+  font-size: var(--text-font-size);
+  line-height: 18px;
+  inline-size: 70px;
+  block-size: 26px;
+  display: flex;
+  padding: 1.5px 13px; 
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--color-button);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+  border: 0;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-block-end: 1px solid var(--color-button);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--color-button);
+  pointer-events: none;
+}
+
+.title {
+  color: var(--color-title);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  text-shadow: 4px 4px 0 var(--color-shadow-t-l);
+  font-weight: 700;
+  line-height: 83%;
+  align-items: center;
+}
+
+.header__title {
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+}
+
+.header__subtitle {
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+}
+
+.title-decor {
+  font-weight: 700;
+  line-height: 23.4px;
+  color: var(--color-subtitle);
+  background-color: var(--color-accent);
+  font-size: var(--text-font-size);
+}
+
+.content {
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+}
+
+.section__title {
+  color: var(--color-section-title);
+  font-weight: bold;
+  line-height: 23.4px;
+  font-size: var(--text-font-size);
+  margin-block-end: 20px;
+}
+
+section .title-decor {
+  margin-block-start: 20px;
+  margin-block-end: 10px;
+}
+
+.decorated__link {
+  text-shadow: 2px 1px 0 var(--color-shadow-t-l);
+  text-decoration-line: none;
+}
+
+.decorated__link:hover {
+  border-block-end: 1px solid var(--color-main);
+}
+
+.decorated__link:focus {
+  outline: none;
+}
+
+.decorated__link:focus-visible {
+  outline: 1px solid var(--color-main);
+}
+
+.section__text {
+  font-size: var(--text-font-size);
+  line-height: 23.4px;
+}
+
+.section__title-indentation {
+  margin-block-start: 50px;
+}
+
+.section-concentrate-card .title-decor-no-margin { /*?*/
+  margin-block-end: 9px;
+}
+
+.section-recommendation h3 {
+  margin-block-end: 20px;
+}
+
+.section-recommendation h4 {
+  font-weight: 400;
+}
+
+.wrapper-gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px; 
+}
+
+.section-gallery .title-decor {
+  margin-block-start: 50px;
+  margin-block-end: 10px;
+}
+
+.picture {
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-block-start: 40px; /*38px*/ 
+  height: 100vh;
+  min-height: 668px;
+  inline-size: 100%; 
+}
+
+.footer__title {
+  align-self: center;
+  justify-self: center;
+  text-shadow: 2px 2px 0 var(--color-shadow-f);
+}
+
+@media (width >=768px) {
+  .header {
+    padding-block-start: 20px;
+    padding-block-end: 20px;
+    margin-block-end: 60px;
+  }
+
+  .decorated-zone::before {
+    inset-block-start: 20px;
+    inset-inline-end: 20px;
+  }
+
+  .decorated-zone::after {
+    inset-block-end: 20px;
+    inset-inline-start: 20px;
+  }
+
+  .decorated__element {
+    inset-block-start: 20px;
+    inset-inline-end: 30px;
+  }
+
+  .header__theme-menu {
+    padding-inline-end: 20px;
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__title {
+    padding-inline-start: 0;
+  }
+
+  .header__subtitle {
+    justify-self: end;
+    padding-inline-start: 384px;
+    padding-inline-end: 20px;
+  }
+
+  .content {
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+  }
+
+  .content-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .section-focussed {
+    gap: 38px;
+  }
+
+  .section-focussed-card {
+    grid-column: span 2;
+  }
+
+  .content-section .title-decor-no-margin {
+    margin-block-start: 0;
+  }
+
+  .section-concentrate {
+    margin-block-start: var(--margin-block-start, 80px);
+  }
+
+  .section-concentrate-card {
+    grid-column: span 3;
+  }
+
+  .section-concentrate .section__title {
+    margin-block-end: 0;
+    margin-block-start: 0;
+  }
+
+  .section-recommendation {
+    margin-block-start: var(--margin-block-start, 80px);
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+  }
+
+  .section-recommendation .section__title {
+   margin-block-start: 0;
+   margin-block-end: 0;
+  }
+
+  .section-recommendation-card > .title-decor {
+    margin-block-start: 0;
+  }
+
+  .section-gallery {
+    display: block;
+    margin-block-start: var(--margin-block-start, 80px);
+  }
+
+  .section-gallery .wrapper-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-block-start: 20px; 
+  }
+
+  .picture {
+    block-size: 100%;
+  }
+
+  .sunset-image {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .ice-cream-image {
+    grid-column: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+
+  .tape-image {
+    grid-column: 1;
+    grid-row-start: 2;
+    grid-row-end: 4;
+  }
+
+  .street-image {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row: 3;
+  }
+
+  .footer {
+    margin-block-start: 60px;
+  }
+} 
+
+
+@media (width >=1024px) {
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+    padding-inline-end: 0;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+  
+  .header__subtitle {
+    padding-inline-start: 513px;
+  }
+
+  .section-focussed {
+    gap: 20px;
+  }
+
+   .wrapper-card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-content: center;
+   }
+
+   .section-recommendation {
+    gap: 12px;
+   }
 }
