--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,25 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  font-family: var(--font-family);
-  font-size: var(--text-font-size);
-  font-weight: 400;
   color: var(--color-main, #f1b2ce);
-  background-image: var(--bg-image-theme);
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: var(--text-font-size);
   background-color: var(--color-bg);
-  background-size: cover;
+  background-image: var(--bg-image-theme);
   background-position: center;
+  background-size: cover;
   background-attachment: fixed;
 }
 
 .header {
-  /*block-size: min(668px, 100vh);*/
-  height: 100vh;
-  min-height: 668px;
+  position: relative;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
-  position: relative;
+  height: 100vh;
+  min-height: 668px;
   margin-block-end: 40px;
   padding-block-start: 10px;
   padding-block-end: 10px;
@@ -33,51 +32,51 @@
 .decorated-zone::before {
   content: '';
   position: absolute;
+  border-inline-end: 1px solid var(--color-decor-zone);
+  border-block-start: 1px solid var(--color-decor-zone);
   inline-size: 25px;
   block-size: 25px;
   inset-block-start: 10px;
   inset-inline-end: 10px;
-  border-block-start: 1px solid var(--color-decor-zone);
-  border-inline-end: 1px solid var(--color-decor-zone);
 }
 
 .decorated-zone::after {
   content: '';
   position: absolute;
+  border-inline-start: 1px solid var(--color-decor-zone);
+  border-block-end: 1px solid var(--color-decor-zone);
   inline-size: 25px;
   block-size: 25px;
   inset-block-end: 10px; 
   inset-inline-start: 10px;
-  border-block-end: 1px solid var(--color-decor-zone);
-  border-inline-start: 1px solid var(--color-decor-zone);
 }
 
 .decorated__element {
-  position: absolute;
   content: "";
-  color: var(--color-decor-zone);
-  text-transform: uppercase;
-  inset-block-start: 10px; /*top*/
-  inset-inline-end: 19px; /*right*/
+  position: absolute;
   display: flex;
   align-items: center;
   gap: 10px;
+  color: var(--color-decor-zone);
   line-height: 139%;
+  text-transform: uppercase;
+  inset-block-start: 10px;
+  inset-inline-end: 19px;
 }
 
 .decorated__element::after {
   content: '';
-  inline-size: 9px;
-  block-size: 9px;
   display: block;
   border-radius: 100%;
-  background-color: var(--color-decor-zone);
   box-shadow: 0 0 4px 2px var(--color-decor-zone);
+  background-color: var(--color-decor-zone);
+  inline-size: 9px;
+  block-size: 9px;
 }
 
 .header__theme-menu {
   justify-self: right;
-  padding-inline-end: 10px; /*padding-right*/
+  padding-inline-end: 10px;
 }
 
 .header__theme-menu-list {
@@ -87,16 +86,16 @@
 } 
 
 .header__theme-menu-button {
-  color: var(--color-button);
-  text-transform: lowercase;
-  background-color: transparent;
+  display: flex;
   border: 0;
+  padding: 1.5px 13px;
+  color: var(--color-button);
   font-size: var(--text-font-size);
   line-height: 18px;
+  text-transform: lowercase;
+  background-color: transparent;
   inline-size: 70px;
   block-size: 26px;
-  display: flex;
-  padding: 1.5px 13px;
 }
 
 .header__theme-menu-button:hover {
@@ -104,8 +103,8 @@
 }
 
 .header__theme-menu-button:focus {
-  outline: none;
   border: 0;
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
@@ -118,12 +117,12 @@
 }
 
 .title {
-  color: var(--color-title);
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  text-shadow: 4px 4px 0 var(--color-shadow-t-l);
-  font-weight: 700;
-  line-height: 83%;
   align-items: center;
+  color: var(--color-title);
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--color-shadow-t-l);
 }
 
 .header__title {
@@ -137,11 +136,11 @@
 }
 
 .title-decor {
-  font-weight: 700;
-  line-height: 23.4px;
   color: var(--color-subtitle);
-  background-color: var(--color-accent);
+  font-weight: 700;
   font-size: var(--text-font-size);
+  line-height: 23.4px;
+  background-color: var(--color-accent);
 }
 
 .content {
@@ -150,11 +149,11 @@
 }
 
 .section__title {
+  margin-block-end: 20px;
   color: var(--color-section-title);
   font-weight: bold;
-  line-height: 23.4px;
   font-size: var(--text-font-size);
-  margin-block-end: 20px;
+  line-height: 23.4px;
 }
 
 section .title-decor {
@@ -163,8 +162,8 @@ section .title-decor {
 }
 
 .decorated__link {
-  text-shadow: 2px 1px 0 var(--color-shadow-t-l);
   text-decoration-line: none;
+  text-shadow: 2px 1px 0 var(--color-shadow-t-l);
 }
 
 .decorated__link:hover {
@@ -187,10 +186,6 @@ section .title-decor {
 .section__title-indentation {
   margin-block-start: 50px;
 }
-
-/*.section-concentrate-card .title-decor-no-margin {
-  margin-block-end: 9px;
-}*/
 
 .section-recommendation h3 {
   margin-block-end: 20px;
@@ -219,24 +214,24 @@ section .title-decor {
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr;
-  margin-block-start: 40px; /*38px*/ 
+  grid-template-columns: 1fr; 
   height: 100vh;
   min-height: 668px;
+  margin-block-start: 40px;
   inline-size: 100%;
 }
 
 .footer__title {
-  align-self: center;
   justify-self: center;
+  align-self: center;
   text-shadow: 2px 2px 0 var(--color-shadow-f);
 }
 
 @media (width >=768px) {
   .header {
+    margin-block-end: 60px;
     padding-block-start: 20px;
     padding-block-end: 20px;
-    margin-block-end: 60px;
   }
 
   .decorated-zone::before {
@@ -304,14 +299,14 @@ section .title-decor {
   }
 
   .section-concentrate .section__title {
-    margin-block-end: 0;
     margin-block-start: 0;
+    margin-block-end: 0;
   }
 
   .section-recommendation {
-    margin-block-start: var(--margin-block-start, 80px);
     grid-template-columns: 1fr 2fr;
     gap: 20px;
+    margin-block-start: var(--margin-block-start, 80px);
   }
 
   .section-recommendation .section__title {
@@ -357,9 +352,9 @@ section .title-decor {
   }
 
   .street-image {
+    grid-row: 3;
     grid-column-start: 2;
     grid-column-end: 4;
-    grid-row: 3;
   }
 
   .footer {
@@ -394,8 +389,8 @@ section .title-decor {
   .wrapper-card {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
     justify-content: center;
+    gap: 20px;
    }
 
    .section-concentrate .title-decor-offset {
