--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,8 +3,9 @@
   и их переопределение под различные устройства
 */
 :root {
-  --font-family: "IBM Plex Mono", sans-serif;
+  --font-family: "IBM Plex Mono", monospace;
   --text-font-size: 18px;
+  --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --color-title: rgba(219, 0, 255, 1);/*заголовок в шапке и подвале*/
   --color-main: rgba(241, 178, 206, 1);/*цвет параграфов в section*/
   --color-accent: rgba(255, 0, 112, 1);/*для заливок*/
@@ -17,4 +18,10 @@
   --color-decor-zone: rgba(255, 0, 112, 1);/*для уголков*/
   --color-shadow-t-l: rgba(255, 0, 112, 1);/*для тени h1, link*/
   --color-shadow-f: rgba(255, 0, 112, 1);/*тень для h2(футера)*/
+}
+
+@media (width >= 768px) {
+  :root {
+    --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
